# gun_detection_python_vs_c_plus

./: .gitignore  Readme.md  dataset.yaml  video_play.py
c++/: CMakeLists.txt  a.out  detect_firearm.cpp  nms.cpp
python/: gun_detect.py  nms.py  video_play.py
